Bug 458933 - Konqueror crashes when clicking "Places"
Summary: Konqueror crashes when clicking "Places"
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.1
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords: drkonqi
: 459377 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-09-09 16:51 UTC by lipun
Modified: 2022-10-07 17:19 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot_2022.09.10_09:32:03-1.jpeg (533.94 KB, image/jpeg)
2022-09-10 06:40 UTC, lipun
Details
Backtrace with debugging symbols installed (10.87 KB, text/plain)
2022-09-19 09:37 UTC, Yaroslav Sidlovsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lipun 2022-09-09 16:51:28 UTC
Application: konqueror (22.08.0)

Qt Version: 5.15.5
Frameworks Version: 5.97.0
Operating System: Linux 5.15.0-46-generic x86_64
Windowing System: X11
Distribution: KDE neon User - 5.25
DrKonqi: 5.25.5 [KCrashBackend]

-- Information about the crash:
KOnqeror crashed when click to entry points

The crash can be reproduced every time.

-- Backtrace:
Application: Konqueror (konqueror), signal: Segmentation fault

[New LWP 10977]
[New LWP 10978]
[New LWP 10979]
[New LWP 10980]
[New LWP 10981]
[New LWP 10982]
[New LWP 10983]
[New LWP 10984]
[New LWP 10985]
[New LWP 10986]
[New LWP 10987]
[New LWP 10990]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007f3f8543999f in __GI___poll (fds=0x7fffaa6b89f8, nfds=1, timeout=1000) at ../sysdeps/unix/sysv/linux/poll.c:29
__preamble__
[Current thread is 1 (Thread 0x7f3f7eda7080 (LWP 10975))]

Thread 13 (Thread 0x7f3f46384700 (LWP 10990)):
#0  __GI___xstat (vers=1, name=0x7f3f3c0064d8 "/home/roman/prefix32/dosdevices/z:/proc/1181/root/usr/src/linux-hwe-5.13-headers-5.13.0-27/security/Makefile", buf=0x7f3f46382890) at ../sysdeps/unix/sysv/linux/wordsize-64/xstat.c:35
#1  0x00007f3f4688d711 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#2  0x00007f3f4688d866 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#3  0x00007f3f4688d866 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#4  0x00007f3f4688d866 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#5  0x00007f3f4688d866 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#6  0x00007f3f4688d866 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#7  0x00007f3f4688d866 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#8  0x00007f3f4688d866 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#9  0x00007f3f4688d866 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#10 0x00007f3f4688d866 in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#11 0x00007f3f4688d95b in ?? () from /lib/x86_64-linux-gnu/libdolphinprivate.so.5
#12 0x00007f3f832df859 in QObject::event (this=0x5582da0b5550, e=0x7f3f3c004380) at kernel/qobject.cpp:1314
#13 0x00007f3f83d9de83 in QApplicationPrivate::notify_helper (this=this@entry=0x5582d98b2540, receiver=receiver@entry=0x5582da0b5550, e=e@entry=0x7f3f3c004380) at kernel/qapplication.cpp:3637
#14 0x00007f3f83da6c98 in QApplication::notify (this=0x7fffaa6ba360, receiver=0x5582da0b5550, e=0x7f3f3c004380) at kernel/qapplication.cpp:3161
#15 0x00007f3f832b1c6a in QCoreApplication::notifyInternal2 (receiver=0x5582da0b5550, event=0x7f3f3c004380) at ../../include/QtCore/5.15.5/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:332
#16 0x00007f3f832b4571 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5582da090870) at kernel/qcoreapplication.cpp:1821
#17 0x00007f3f8330cf87 in postEventSourceDispatch (s=0x7f3f3c0047b0) at kernel/qeventdispatcher_glib.cpp:277
#18 0x00007f3f8124e17d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007f3f8124e400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007f3f8124e4a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007f3f8330c5e2 in QEventDispatcherGlib::processEvents (this=0x7f3f3c000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#22 0x00007f3f832b076b in QEventLoop::exec (this=this@entry=0x7f3f46383be0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#23 0x00007f3f830ca372 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#24 0x00007f3f830cb553 in QThreadPrivate::start (arg=0x5582da0828e0) at thread/qthread_unix.cpp:331
#25 0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#26 0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 12 (Thread 0x7f3f68ff9700 (LWP 10987)):
#0  0x00007f3f8543999f in __GI___poll (fds=0x7f3f40014190, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f3f8124e36e in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f3f8124e4a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f3f8330c5fb in QEventDispatcherGlib::processEvents (this=0x7f3f40000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f3f832b076b in QEventLoop::exec (this=this@entry=0x7f3f68ff8bb0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#5  0x00007f3f830ca372 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#6  0x00007f3f842fdf4b in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f3f830cb553 in QThreadPrivate::start (arg=0x7f3f84381d80) at thread/qthread_unix.cpp:331
#8  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#9  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 11 (Thread 0x7f3f697fa700 (LWP 10986)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5582d9b46630) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5582d9b465e0, cond=0x5582d9b46608) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5582d9b46608, mutex=0x5582d9b465e0) at pthread_cond_wait.c:647
#3  0x00007f3f7663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007f3f7663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 10 (Thread 0x7f3f69ffb700 (LWP 10985)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5582d9a5a560) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5582d9a5a510, cond=0x5582d9a5a538) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5582d9a5a538, mutex=0x5582d9a5a510) at pthread_cond_wait.c:647
#3  0x00007f3f7663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007f3f7663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 9 (Thread 0x7f3f6a7fc700 (LWP 10984)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5582d9a5a560) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5582d9a5a510, cond=0x5582d9a5a538) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5582d9a5a538, mutex=0x5582d9a5a510) at pthread_cond_wait.c:647
#3  0x00007f3f7663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007f3f7663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7f3f6affd700 (LWP 10983)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5582d9a59fd0) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5582d9a59f80, cond=0x5582d9a59fa8) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5582d9a59fa8, mutex=0x5582d9a59f80) at pthread_cond_wait.c:647
#3  0x00007f3f7663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007f3f7663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7f3f6b7fe700 (LWP 10982)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5582d9a59fd0) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5582d9a59f80, cond=0x5582d9a59fa8) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5582d9a59fa8, mutex=0x5582d9a59f80) at pthread_cond_wait.c:647
#3  0x00007f3f7663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007f3f7663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7f3f6bfff700 (LWP 10981)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5582d9a59fd0) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5582d9a59f80, cond=0x5582d9a59fa8) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5582d9a59fa8, mutex=0x5582d9a59f80) at pthread_cond_wait.c:647
#3  0x00007f3f7663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007f3f7663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f3f70cbe700 (LWP 10980)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5582d9a59fd0) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5582d9a59f80, cond=0x5582d9a59fa8) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5582d9a59fa8, mutex=0x5582d9a59f80) at pthread_cond_wait.c:647
#3  0x00007f3f7663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007f3f7663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f3f7c83b700 (LWP 10979)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5582d9985ac8) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5582d9985a78, cond=0x5582d9985aa0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5582d9985aa0, mutex=0x5582d9985a78) at pthread_cond_wait.c:647
#3  0x00007f3f7663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007f3f7663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f3f7d191700 (LWP 10978)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5582d9a5d308) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5582d9a5d2b8, cond=0x5582d9a5d2e0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5582d9a5d2e0, mutex=0x5582d9a5d2b8) at pthread_cond_wait.c:647
#3  0x00007f3f7663a5eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#4  0x00007f3f7663a1eb in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f3f7e233700 (LWP 10977)):
#0  0x00007f3f8543999f in __GI___poll (fds=0x7f3f7e232ae8, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f3f81e0ec1a in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f3f81e1090a in xcb_wait_for_event () from /lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f3f7e9763e8 in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f3f830cb553 in QThreadPrivate::start (arg=0x5582d98b5db0) at thread/qthread_unix.cpp:331
#5  0x00007f3f81ca9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f3f85446133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f3f7eda7080 (LWP 10975)):
[KCrash Handler]
#4  0x00007f3f85573d67 in KonqView::setPassiveMode (this=this@entry=0x5582da018ce0, mode=mode@entry=true) at ./src/konqview.cpp:968
#5  0x00007f3f85576f2a in KonqView::switchView (this=this@entry=0x5582da018ce0, viewFactory=...) at ./src/konqview.cpp:279
#6  0x00007f3f855775bb in KonqView::changePart (forceAutoEmbed=false, serviceName=..., mimeType=..., this=0x5582da018ce0) at ./src/konqview.cpp:353
#7  KonqView::changePart (this=this@entry=0x5582da018ce0, mimeType=..., serviceName=..., forceAutoEmbed=forceAutoEmbed@entry=false) at ./src/konqview.cpp:309
#8  0x00007f3f855c628f in KonqMainWindow::openView (this=0x5582d9db5480, mimeType=..., _url=..., childView=0x5582da018ce0, req=...) at ./src/konqmainwindow.cpp:856
#9  0x00007f3f855f2e29 in UrlLoader::embed (this=0x5582da44e250) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qrefcount.h:60
#10 0x00007f3f855c8a91 in KonqMainWindow::openUrl (this=this@entry=0x5582d9db5480, _view=_view@entry=0x5582d9a57bc0, _url=..., _mimeType=..., _req=..., trustedSource=trustedSource@entry=false) at ./src/konqmainwindow.cpp:609
#11 0x00007f3f855cb08d in KonqMainWindow::openUrlRequestHelper (this=this@entry=0x5582d9db5480, childView=0x5582d9a57bc0, url=..., args=..., browserArgs=...) at ./src/konqmainwindow.cpp:965
#12 0x00007f3f855cd90c in KonqMainWindow::slotOpenURLRequest (this=0x5582d9db5480, url=..., args=..., browserArgs=...) at ./src/konqmainwindow.cpp:951
#13 0x00007f3f85564db0 in KonqMainWindow::qt_static_metacall (_o=0x5582d9db5480, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./obj-x86_64-linux-gnu/src/kdeinit_konqueror_autogen/EWIEGA46WW/moc_konqmainwindow.cpp:605
#14 0x00007f3f832e8d84 in doActivate<false> (sender=0x5582d9fdef50, signal_index=8, argv=0x7fffaa6b9c50) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:395
#15 0x00007f3f832e20c7 in QMetaObject::activate (sender=sender@entry=0x5582d9fdef50, m=m@entry=0x7f3f85264d80 <KParts::BrowserExtension::staticMetaObject>, local_signal_index=local_signal_index@entry=5, argv=argv@entry=0x7fffaa6b9c50) at kernel/qobject.cpp:3946
#16 0x00007f3f85212403 in KParts::BrowserExtension::openUrlRequestDelayed (this=this@entry=0x5582d9fdef50, _t1=..., _t2=..., _t3=...) at ./obj-x86_64-linux-gnu/src/KF5Parts_autogen/EWIEGA46WW/moc_browserextension.cpp:582
#17 0x00007f3f85235dce in KParts::BrowserExtension::slotEmitOpenUrlRequestDelayed (this=0x5582d9fdef50) at ./src/browserextension.cpp:249
#18 0x00007f3f832df859 in QObject::event (this=0x5582d9fdef50, e=0x5582da27d6e0) at kernel/qobject.cpp:1314
#19 0x00007f3f83d9de83 in QApplicationPrivate::notify_helper (this=this@entry=0x5582d98b2540, receiver=receiver@entry=0x5582d9fdef50, e=e@entry=0x5582da27d6e0) at kernel/qapplication.cpp:3637
#20 0x00007f3f83da6c98 in QApplication::notify (this=0x7fffaa6ba360, receiver=0x5582d9fdef50, e=0x5582da27d6e0) at kernel/qapplication.cpp:3161
#21 0x00007f3f832b1c6a in QCoreApplication::notifyInternal2 (receiver=0x5582d9fdef50, event=0x5582da27d6e0) at ../../include/QtCore/5.15.5/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:332
#22 0x00007f3f832b4571 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x5582d9895ef0) at kernel/qcoreapplication.cpp:1821
#23 0x00007f3f8330cf87 in postEventSourceDispatch (s=0x5582d9970800) at kernel/qeventdispatcher_glib.cpp:277
#24 0x00007f3f8124e17d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f3f8124e400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f3f8124e4a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f3f8330c5e2 in QEventDispatcherGlib::processEvents (this=0x5582d9983e10, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#28 0x00007f3f832b076b in QEventLoop::exec (this=this@entry=0x7fffaa6ba290, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#29 0x00007f3f832b8914 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#30 0x00007f3f85602c71 in kdemain (argc=<optimized out>, argv=<optimized out>) at ./src/konqmain.cpp:277
#31 0x00007f3f8534b083 in __libc_start_main (main=0x5582d9664060 <main>, argc=1, argv=0x7fffaa6ba4e8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffaa6ba4d8) at ../csu/libc-start.c:308
#32 0x00005582d966409e in _start ()
[Inferior 1 (process 10975) detached]

Reported using DrKonqi
Comment 1 Stefano Crocco 2022-09-09 16:54:33 UTC
Sorry, I don't understand what you mean by "entry points". Could you describe in more detail what happened, please?
Comment 2 lipun 2022-09-10 06:40:22 UTC
Created attachment 151960 [details]
Screenshot_2022.09.10_09:32:03-1.jpeg

В письме от пятница, 9 сентября 2022 г. 19:54:33 MSK Вы написали:
> https://bugs.kde.org/show_bug.cgi?id=458933
> 
> Stefano Crocco <stefano.crocco@alice.it> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
> CC|                            |stefano.crocco@alice.it
> 
> --- Comment #1 from Stefano Crocco <stefano.crocco@alice.it> ---
> Sorry, I don't understand what you mean by "entry points". Could you
> describe in more detail what happened, please?

Good afternoon. This is my first report, sorry if I'm not being informative. I 
really like Konqueror, it's my favorite software. Please write if you still 
need something from me

https://cloud.roden.fun/s/Ly5D7CWaCgN85q2
Comment 3 Igor Murzich 2022-09-19 09:23:16 UTC
*** Bug 459377 has been marked as a duplicate of this bug. ***
Comment 4 Yaroslav Sidlovsky 2022-09-19 09:37:49 UTC
Created attachment 152211 [details]
Backtrace with debugging symbols installed

Same bug happens with konqueror-22.08.1.
Comment 5 Bug Janitor Service 2022-09-21 17:28:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/139
Comment 6 Stefano Crocco 2022-09-21 20:24:48 UTC
Git commit c9f3d1957f7b6c168a025b5b4014e46a5f49bb63 by Stefano Crocco.
Committed on 21/09/2022 at 17:27.
Pushed by dfaure into branch 'master'.

Fix crash caused by using original view rather than actual view

UrlLoader::decideEmbedOrSave used the original view when deciding
whether it could be reused to open the URL, instead of using the view
provided using UrlLoader::setView. If the URL was opened by clicking on
a sidebar item, this caused a sidebar view to be used, rather than the
correct dolphin part. This lead to a crash because the sidebar view is
a passive view, which caused KonqViewManager::chooseNextView to return
nullptr

M  +1    -1    src/konqmainwindow.cpp
M  +6    -8    src/urlloader.cpp

https://invent.kde.org/network/konqueror/commit/c9f3d1957f7b6c168a025b5b4014e46a5f49bb63
Comment 7 Stefano Crocco 2022-09-22 13:06:05 UTC
Git commit 429936da48ebd8bcc6f75dacd9180eb086e4add3 by Stefano Crocco.
Committed on 22/09/2022 at 13:06.
Pushed by stefanocrocco into branch 'cherry-pick-c9f3d195'.

Fix crash caused by using original view rather than actual view

UrlLoader::decideEmbedOrSave used the original view when deciding
whether it could be reused to open the URL, instead of using the view
provided using UrlLoader::setView. If the URL was opened by clicking on
a sidebar item, this caused a sidebar view to be used, rather than the
correct dolphin part. This lead to a crash because the sidebar view is
a passive view, which caused KonqViewManager::chooseNextView to return
nullptr


(cherry picked from commit c9f3d1957f7b6c168a025b5b4014e46a5f49bb63)

M  +1    -1    src/konqmainwindow.cpp
M  +6    -8    src/urlloader.cpp

https://invent.kde.org/network/konqueror/commit/429936da48ebd8bcc6f75dacd9180eb086e4add3
Comment 8 Yaroslav Sidlovsky 2022-09-22 13:25:58 UTC
Thanks!
Comment 9 Stefano Crocco 2022-10-07 17:19:45 UTC
Git commit 2d050101105638f5d72f1e3486d80a0ead1fd721 by Stefano Crocco.
Committed on 07/10/2022 at 17:20.
Pushed by stefanocrocco into branch 'release/22.08'.

Fix crash caused by using original view rather than actual view

UrlLoader::decideEmbedOrSave used the original view when deciding
whether it could be reused to open the URL, instead of using the view
provided using UrlLoader::setView. If the URL was opened by clicking on
a sidebar item, this caused a sidebar view to be used, rather than the
correct dolphin part. This lead to a crash because the sidebar view is
a passive view, which caused KonqViewManager::chooseNextView to return
nullptr

M  +1    -1    src/konqmainwindow.cpp
M  +6    -8    src/urlloader.cpp

https://invent.kde.org/network/konqueror/commit/2d050101105638f5d72f1e3486d80a0ead1fd721